syntax = "proto3";

option go_package = "github.com/numaproj/numaflow-go/pkg/apis/proto/function/reducefn";

import "google/protobuf/empty.proto";
import "pkg/apis/proto/common/common.proto";


package function.reducefn;

service Reduce {
  // ReduceFn applies a reduce function to a request stream.
  rpc ReduceFn(stream ReduceRequest) returns (stream ReduceResponseList);

  // IsReady is the heartbeat endpoint for gRPC.
  rpc IsReady(google.protobuf.Empty) returns (ReadyResponse);
}

/**
 * ReduceRequest represents a request element.
 */
message ReduceRequest {
  repeated string keys = 1;
  bytes value = 2;
  common.EventTime event_time = 3;
  common.Watermark watermark = 4;
}

/**
 * ReduceResponse represents a response element.
 */
message ReduceResponse {
  repeated string keys = 1;
  bytes value = 2;
  repeated string tags = 3;
}

/**
 * ReduceResponseList represents a list of response elements.
 */
message ReduceResponseList {
  repeated ReduceResponse elements = 1;
}

/**
 * ReadyResponse is the health check result.
 */
message ReadyResponse {
  bool ready = 1;
}